refactor: update SgrhService import paths and improve code readability